Bug#53812: assert row/row0umod.c line 660 in txn rollback after crash recovery

row_undo_mod_upd_exist_sec(): Tolerate a failure to build the index entry
for a DYNAMIC or COMPRESSED table during crash recovery.